--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<title>About me</title>
+<title>My awesome website</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -385,12 +385,25 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">About me</h1>
+<h1 class="title toc-ignore">My awesome website</h1>
 
 </div>
 
 
-<p>My name is Ying and I am learing how to make a website for P8105 !!!</p>
+<div id="this-is-yings-awesome-website" class="section level1">
+<h1>This is Ying’s awesome website</h1>
+<p>You can learn about me <a href="about.html">here</a>.</p>
+<p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
+</div>
+<div id="lets-add-some-links" class="section level1">
+<h1>Let’s add some links</h1>
+<p>I often use <a href="https://www.google.com">google</a> to do <strong>data science</strong>.</p>
+<div id="lets-add-an-image" class="section level2">
+<h2>let’s add an image</h2>
+<p>here’s my cat:</p>
+<p><img src="Image/cat.jpg" /></p>
+</div>
+</div>
 
 
 
