getting start with hw4

--- a/cover.html
+++ b/cover.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Ying’s Awesome Website</title>
+<title>cover.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -313,21 +313,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Ying’s Awesome Website</h1>
 
 </div>
 
 
-<center>
-<img src = "Image/lion.jpg" style = "width:60%">
-</center>
-<p><br /></p>
-<center>
-<span style="color:#2C85C2; font-family: Babas; font-size: 2em;">HEALTH IS A HUMAN RIGHT</span>
-</center>
-<p><br/></p>
-<p>This is a personal website for Ying Chen, M.D., MS, MA.</p>
-<p>Built in October 2019 for course <a href="http://p8105.com/">P8105-Data Science</a>. This class is taught by Dr. <a href="https://github.com/jeff-goldsmith">Jeff Goldsmith</a>. Jeff is an awesome professor in teaching Data Science and he has a cat named TED!</p>
+<p><img src = "images/cover.png" style = "width:150%" align="center"></p>
 
 
 
