--- a/index.html
+++ b/index.html
@@ -690,6 +690,7 @@ $(document).ready(function () {
 <div id="backgroud" class="section level3">
 <h3><span style="color:#2C85C2; font-family: Babas; font-size: 1em;">Backgroud</span></h3>
 <p>I came to the United States on a business trip in 1997. I fell in love with Columbia University and stayed here since then. I have a MD, a MS and a MA degree.</p>
+<p><a href="resume.html">Learn more about me…</a></p>
 </div>
 <div id="contact-me" class="section level3">
 <h3><span style="color:#2C85C2; font-family: Babas; font-size: 1em;">Contact me</span></h3>
