--- a/Resume.html
+++ b/Resume.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="resume.html">
+  <a href="Resume.html">
     <span class="fa fa-user-circle-o"></span>
      
     Resume
