--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Ying’s Awesome Website</title>
+<title>about.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -320,17 +320,16 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Ying’s Awesome Website</h1>
 
 </div>
 
 
 <center>
-<img src = "Image/lion.jpg" style = "width:60%">
+<img src = "Image/lion.jpg" style = "width:100%">
 </center>
 <p><br /></p>
 <center>
-<span style="color:#2C85C2; font-family: Babas; font-size: 2em;">HEALTH IS A HUMAN RIGHT</span>
+<span style="color:#2C85C2; font-family: Babas; font-size: 4em;">HEALTH IS A HUMAN RIGHT</span>
 </center>
 <p><br/></p>
 <p>This is a personal website for Ying Chen, M.D., MS, MA.</p>
