--- a/Resume.html
+++ b/Resume.html
@@ -14,7 +14,7 @@
 
 <meta name="date" content="2019-10-24" />
 
-<title>Resume</title>
+<title>Curriculum Vitae</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -282,14 +282,7 @@ $(document).ready(function () {
   <a href="Resume.html">
     <span class="fa fa-user-circle-o"></span>
      
-    Resume
-  </a>
-</li>
-<li>
-  <a href="plotyly.html">
-    <span class="fa fa-bar-chart"></span>
-     
-    Plotly
+    CV
   </a>
 </li>
 <li>
@@ -322,28 +315,128 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Resume</h1>
+<h1 class="title toc-ignore">Curriculum Vitae</h1>
 <h4 class="author">Ying Chen</h4>
 <h4 class="date">10/24/2019</h4>
 
 </div>
 
 
-<blockquote>
-<p>EDUCATION</p>
-</blockquote>
-<blockquote>
-<p>RESEARCH EXPERIENCE</p>
-</blockquote>
-<blockquote>
-<p>PROFESSIONAL EXPERIENCE</p>
-</blockquote>
-<blockquote>
-<p>PUBLICATION</p>
-</blockquote>
-<blockquote>
-<p>SKILLS</p>
-</blockquote>
+<div id="date-of-preparation" class="section level2">
+<h2><strong>DATE OF PREPARATION:</strong></h2>
+<p>October 28th, 2019</p>
+</div>
+<div id="education" class="section level2">
+<h2><strong>EDUCATION:</strong></h2>
+<p>Dr. PH in Biostatistics Mailman School of Public Health, Columbia University 2018-2023</p>
+<p>M.S. in Biostatistics Mailman School of Public Health, Columbia University 2003</p>
+<p>M.A. in Medical Informatics School of Physician and Surgeon, Columbia University 1999</p>
+<p>M.D. in Clinical Medicine Shenyang Medical College, China 1995</p>
+</div>
+<div id="traineeship" class="section level2">
+<h2><strong>TRAINEESHIP:</strong></h2>
+<p>SAS Programming III: Advanced Techniques 2007 SAS Education Division, Glastonbury, CT</p>
+<p>Ophthalmology Resident 1995 - 1996 #2 Affiliated Hospital of Shenyang Medical College</p>
+<p>Intern in Medicine<br />
+1993 - 1995 #2 Affiliated Hospital of Shenyang Medical College</p>
+</div>
+<div id="prfessional-experiences" class="section level2">
+<h2><strong>PRFESSIONAL EXPERIENCES:</strong></h2>
+<p>ClincalTrials.gov Administrator 2018– Present Institutional Review Boards (IRB), New York State Psychiatric Institute (Psychiatry Department of Columbia University Medical Center) Biostatistician 2017– Present Data Science Department, New York State Psychiatric Institute (Psychiatry Department of Columbia University Medical Center)</p>
+<p>Research Scientist III / Biostatistician 2010– Present Depression Evaluation Service (DES), New York State Psychiatric Institute (Psychiatry Department of Columbia University Medical Center)</p>
+<p>Research Scientist II / Biostatistician &amp; Data Manager 1999 – 2010 Depression Evaluation Service (DES), New York State Psychiatric Institute</p>
+<p>Medical Informatician 1996 - 1998 Beijing SROF CompuTech Co. Ltd., China (IBM RS/6000’s Distributor)</p>
+<p>Attending Ophthalmologist 1995 – 1997 #2 Affiliated Hospital of Shenyang Medical College</p>
+</div>
+<div id="teaching-experiences" class="section level2">
+<h2><strong>TEACHING EXPERIENCES:</strong></h2>
+<p>Spring 2003 Course Instructor<br />
+Introduction to SPSS and SPSS for Intermediate Users Health Science Computer Training Center, Columbia University</p>
+<p>Fall 2001 Teaching Assistant<br />
+Analysis of Categorical Data Department of Biostatistics, Columbia University,</p>
+<p>Fall 1996 Course English Lecturer<br />
+Introduction to Ophthalmology Department of Medicine, Shenyang Medical College</p>
+</div>
+<div id="professional-organizations" class="section level2">
+<h2><strong>PROFESSIONAL ORGANIZATIONS:</strong></h2>
+<pre><code>2001 – Present  American Statistics Association
+2001 – Present  International Chinese Statistical Association
+2000 – Present      American Medical Informatics Association</code></pre>
+</div>
+<div id="honors-and-awards" class="section level2">
+<h2><strong>HONORS AND AWARDS:</strong></h2>
+<pre><code>Medical License     Liaoning, China: 642-01384 (1996)
+Outstanding Intern  Shenyang Medical College and #2 Affiliated Hospital, 1995
+Dean’s List Shenyang Medical College, 1990-1995</code></pre>
+</div>
+<div id="activities-hobbies" class="section level2">
+<h2><strong>ACTIVITIES &amp; HOBBIES</strong></h2>
+<p>Ski, hiking, ice hockey, volleyball, travel, reading and cooking</p>
+</div>
+<div id="languages" class="section level2">
+<h2><strong>LANGUAGES</strong></h2>
+<p>Mandarin and English</p>
+</div>
+<div id="publications" class="section level2">
+<h2><strong>PUBLICATIONS</strong></h2>
+<ol style="list-style-type: decimal">
+<li><p>Maya Sabatello, Lou Ann Blake, Audrey Chao, Arielle Silverman, Ronit Ovadia Mazzoni, Ying Chen, Yuan Zhang, Paul Appelbaum. Including the Blind Community in Precision Medicine Research: Findings from A National Survey and Recommendations. Genetics in Medicine (2019) <a href="https://doi.org/" class="uri">https://doi.org/</a> 10.1038/s41436-019-0533-y</p></li>
+<li><p>Maya Sabatello, Ying Chen, Yuan Zhang, Paul Appelbaum. Disability Inclusion in Precision Medicine Research: A First National Survey. Genetics in Medicine (2019) <a href="https://doi.org/" class="uri">https://doi.org/</a> 10.1038/s41436-019-0486-1</p></li>
+<li><p>DavidJ. Hellerstein, Jonathan W. Stewart, Ying Chen, Vinushini Arunagiri, Bradley S. Peterson, Patrick J. McGrath. Desvenlafaxine vs. placebo in the treatment of persistent depressive disorder. Journal of Affective Disorders. 245 (2019) 403-411. <a href="https://doi.org/10.1016/j.jad.2018.11.065" class="uri">https://doi.org/10.1016/j.jad.2018.11.065</a></p></li>
+<li><p>Maya Sabatello, Ying Chen, Saskia C. Sanderson, Wendy K. Chung, Paul Appelbaum. Increasing genomic literacy among adolescents. Genetics in Medicine (2018) <a href="https://doi.org/10.1038/s41436-018-" class="uri">https://doi.org/10.1038/s41436-018-</a> 0275-2</p></li>
+<li><p>Carlos Blanco, John C. Markowitz, David J. Hellerstein, Arthur M. Nezu, Melanie Wall, Mark Olfson, Ying Chen, Jon Levenson, Maika Onishi, Cindy Varona, Mayumi Okuda, Dawn L. Hershman. A randomized trial of interpersonal psychotherapy, problem solving therapy, and supportive therapy for major depressive disorder in women with breast cancer. Breast Cancer Research and Treatment, (2018), pp1-12. <a href="https://doi.org/10.1007/s10549-018-4994-5" class="uri">https://doi.org/10.1007/s10549-018-4994-5</a></p></li>
+<li><p>Nicole Larson, Ying Chen, Melanie Wall, Megan R. Winkler, Andrea B. Goldschmidt, Dianne Neumark-Sztainer. Personal, behavioral, and environmental predictors of healthy weight maintenance during the transition to adulthood. Preventive Medicine, 113 (2018), 80-90. <a href="https://doi.org/10.1016/j.ypmed.2018.04.027" class="uri">https://doi.org/10.1016/j.ypmed.2018.04.027</a></p></li>
+<li><p>Jinlong Jian, Yuehong Chen, Rossella Liberti, Wenyu Fu, Wenhuo, Hu, RachelSaunders-Pullman, Gregory Pastores, Ying Chen, Chuan-ju Liu. Chitinase-3-like protein 1: A Progranulin Downstream Molecule and Potential Biomarker for Gaucher Disease. EBioMedicine, (2018) <a href="https://doi.org/10.1016/j.ebiom.2018.01.022" class="uri">https://doi.org/10.1016/j.ebiom.2018.01.022</a></p></li>
+<li><p>Martin Lan, Harry Rubin-Falcone, Fatima Motiwala, Ying Chen, Jonathan Stewart, David Hellerstein, John Mann, Patrick McGrath. White Matter Tract Integrity Is Associated with Antidepressant Response to Lurasidone in Bipolar Depression. Bipolar Disorders, Volume 19, Issue 6, September 2017, 444-449.</p></li>
+<li><p>David J. Hellerstein, M.D., Kallio Hunnicutt-Ferguson, Jonathan W. Stewart, M.D., Patrick J. McGrath, M.D., Samantha J. Keller, Bradley S. Peterson, M.D., Ying Chen, M.D., Do Social Functioning and Symptoms Improve with Continuation Antidepressant Treatment of Persistent Depressive Disorder? An Observational Study. Accepted by the Journal of Affective Disorders, Volume 210, March 2017, 258-264.</p></li>
+<li><p>Jinlong Jian, Shuai Zhao, Qing-Yun Tian, Helen Liu, Yunpeng Zhao, Wen-Chi Chen, Gabriele Grunig, Paola A. Torres, Betty C. Wang, Bai Zeng, Gregory Pastores, Wei Tang, Ying Sun, Gregory A. Grabowski, Max Xiangtian Kong, Guilin Wang, Ying Chen, Fengxia Liang, Herman S. Overkleeft, Rachel Saunders-Pullman, Gerald L. Chan, Chuan-ju Liu; Association Between Progranulin and Gaucher Disease. EBioMedicine 11 (2016) 127–137</p></li>
+<li><p>David J. Hellerstein, Greg Ericksona, Jonathan W. Stewart, Patrick J. McGrath, Kallio Hunnicutt-Ferguson, Sarah K. Reynolds, Donna O’Sheaa, Ying Chen, Amy Withers, Yuanjia Wang; Behavioral activation therapy for return to work in medication-responsive chronic depression with persistent psychosocial dysfunction. Comprehensive Psychiatry 57 (2015) 140–147</p></li>
+<li><p>J.W. Stewart, M.D.; P.J. McGrath, M.D.; C. Blondeau, M.D.; D.A. Deliyannides, M.D.; H. David, M.D.; S. Norris, M.D.; Jose Amat, M.D.; D. Pilowski M.D.; P. Tessier, M.D.; L. Laberge, M.D.; D. Oshea; Y. Chen, M.D.; A. Withers, M.A.; R. Bergeron, M.D., Ph.D.; P. Blier, M.D. (2014). Combination Antidepressant Therapy for Major Depressive Disorder: Speed and Probability of Remission. Journal of Psychiatric Research, Volume 52, May 2014, 7-14.</p></li>
+<li><p>D. Hellerstein M.D., J. W. Stewart M.D., P. J. McGrath M.D., D. Deliyannides M.D., S T. Batchelder Ph.D., S. Black M.A., Amy Withers B.A., D. O’Shea M.S., Y. Chen M.D. (2012). A Randomized Controlled Trial of Duloxetine VS. Placebo in the Treatment of Nonmajor Chronic Depression. Journal of Clinical Psychiatry, 73:7, July 2012, 984-991</p></li>
+<li><p>Y. Chen M.D., P. J. McGrath M.D., J. W. Stewart M.D. (2012). Web-Based Electronic Data Capture System in Psychiatry Clinical Trials: A StudyTRAX Review. ICBBE 2012 Proceedings</p></li>
+<li><p>V. Agosti, MSW, Y. Chen M.D., F. R. Levin M.D. (2011). Does Attention Deficit Hyperactivity Disorder Increase the Risk of Suicide Attempts? Journal of Affective Disorders, 133:3, 595-599.</p></li>
+<li><p>H. Yang, S Chuzi, S. J. Youn, L. Sinicropi-Yao, D. Johnson, Y. Chen, A. Clain, L. Baer, P. J. McGrath, J. W. Stewart, M. Fava and G. I. Papakostas (2010). Type of residual symptom and risk of relapse during the continuation/maintenance phase treatment of major depressive disorder with the selective serotonin reuptake inhibitor fluoxetine. European Archives of Psychiatry and Clinical Neuroscience, 2010 260:2, 145-150</p></li>
+<li><p>H. Yang, L. Sinicropi-Yao, S Chuzi, S. J. Youn, A. Clain, L. Baer, Y. Chen, P. J. McGrath, M. Fava and G. I. Papakostas (2010). Residual sleep disturbance and risk of relapse during the continuation/maintenance phase treatment of major depressive disorder with the selective serotonin reuptake inhibitor fluoxetine. Annals of General Psychiatry, 2010, 9:10</p></li>
+<li><p>G. I. Papakostas , P. J. McGrath , J. W. Stewart , D. Charles , Y. Chen, D. Mischoulon , C. Dording and M. Fava (2008). Psychic and somatic anxiety symptoms as predictors of response to fluoxetine in major depressive disorder. Psychiatry Research, 2008 161:1, 116-120</p></li>
+<li><p>P. J. McGrath M.D., J. W. Stewart M.D., F. M. Quitkin M.D., Y. Chen M.D., J. E. Alpert M.D., A. Nierenberg M.D., M. Fava M.D., J. Cheng Ph.D., E. Petkova Ph.D. (2006). A Prospective Study of Predictors of Relapse during Fluoxetine Treatment of Major Depression. American Journal of Psychiatry, 163:9, 1542–1548)</p></li>
+<li><p>F. M. Quitkin M.D., Eva Petkova Ph.D., P.J. McGrath M.D., B.P. Taylor M.A., J.W. Stewart M.D., Jay Amsterdam, M.D., Maurizio Fava, M.D., Jerrold Rosenbaum, M.D., Frederick Reimherr, M.D., Jan Fawcett, M.D., Y. Chen M.D., D.F. Klein M.D. (2003). When Should a Trial of Fluoxetine for Major Depression be Declared Failed? American Journal of Psychiatry, 160:4, 734-740.</p></li>
+<li><p>F.M. Quitkin M.D., J.W. Stewart M.D., P.J. McGrath M.D., B.P. Taylor M.A., M.S. Tisminetzky M.D., E. Petkova Ph.D., Y. Chen M.D., G. Ma, Ph.D., D. F. Klein M.D. (2002). Are There Differences between Women’s and Men’s Antidepressant Responses? American Journal of Psychiatry, 159:11, 1848-1854.</p></li>
+<li><p>Chen, Y. M.D., Wang, S. S.Ph.D., and Cimino, J. M.D. (1999) Linking guidelines for mammography to an electronic medical record for use by patients. AMIA Fall Symposium 1999: 1145.</p></li>
+</ol>
+</div>
+<div id="poster" class="section level2">
+<h2><strong>POSTER:</strong></h2>
+<ol style="list-style-type: decimal">
+<li><p>Predicting Antidepressant and Placebo Responses in Persistent Depression Using Resting-State MRI Functional Connectivity, APA 2018.</p></li>
+<li><p>Targeting Changes in Psychological Mindedness and Alexithymia during Cognitive Behavior Therapy in Depression, Psychological Science, 2018</p></li>
+<li><p>The Neural Basis of Cognitive and Emotional Processing in Persistently Depressed Patients Treated with Desvenlafaxie, ACNP 55th Annual Meeting, Hollywood, FL, Dec. 4-8, 2016</p></li>
+<li><p>Outcome of Behavioral Activation Therapy in Medication-Responsive Chronic Depression with Persistent Psychosocial Dysfunction: A Pilot Study, NCDEU 51st Annual Meeting, Boca Raton, FL, June 13-16, 2011</p></li>
+<li><p>The Effect of Co-Morbid Alcohol Abuse or Dependence on Recovery from Major Depression with Antidepressant Treatment: A STAR*D Report, NCDEU 47th Annual Meeting, Boca Raton, FL, June 11-14, 2007</p></li>
+<li><p>Identification of Placebo Responders Among Drug-Treated Subjects, Joint Meetings of the ASA in San Francisco, CA, August 6, 2003</p></li>
+<li><p>Linking Guidelines for Mammography to an Electronic Medical Record for Use by Patients, AMIA Fall Symposium, Washington, DC, November 9, 1999</p></li>
+</ol>
+</div>
+<div id="in-press" class="section level2">
+<h2><strong>IN PRESS</strong></h2>
+<ol style="list-style-type: decimal">
+<li>Ronit Kishon, Ph.D., Maren Westphal, Ph.D, Lupo Geronazzo-Alman, Ph.D., Ying Chen, M.D., Dovid Green, Ph.D., Bryan Cheng, M.S., Chienwen Kao, M.S., Vinushini Arunagiri, M.A. and Jonathan W. Stewart, M.D. Targeting Changes in Psychological Mindedness and Alexithymia during Cognitive Behavior Therapy in Depression. Accepted: International Journal of Cognitive Therapy, 2019</li>
+</ol>
+</div>
+<div id="in-submission" class="section level2">
+<h2><strong>IN SUBMISSION</strong></h2>
+<ol style="list-style-type: decimal">
+<li><p>Yun Wang, Joel Bernanke, Bradley Peterson, Patrick McGrath, Jonathan Stewart, Ying Chen, Seonjoo Lee, Melanie Wall, Vanessa Bastidas, Susie Hong, Bret Rutherford, David Hellerstein. Antidepressant effects on neural connectivity identified in two clinical trials. Submitted to Molecular Psychiatry, November 2018.</p></li>
+<li><p>Kate Walsh, Ying Chen, Melanie Wall, Jennifer Hirsch, Patrick Wilson, John Santelli, Louisa Gilbert, Martie Thompson, Shamus Khan, Claue A. Mellins. Interactions between Adverse Childhood Experiences and Sexual Assault During College on Hazardous Alcohol Use and Drug Use. Submitted to Psychological Trauma: Theory, Research, Practice and Policy. 2019.</p></li>
+<li><p>Maya Sabatello, Ying Chen, Fiorella Herrera, Erika Brockhoff, Jehannine Austin, Paul S. Appelbaum. What do Teenagers Think about Precision Psychiatry? Submitted to Genetics in Medicine, October 2019.</p></li>
+</ol>
+</div>
+<div id="in-preparation" class="section level2">
+<h2><strong>IN PREPARATION</strong></h2>
+<ol style="list-style-type: decimal">
+<li><p>Maya Sabatello, Yuan Zhang, Ying Chen, Paul S. Appelbaum. In Different Voices: The Views of People with Disabilities about Return of Results from Precision Medicine Research. 2019.</p></li>
+<li><p>Jie Yang, David Hellerstein, Zhishun Wang, Patrick McGrath, Ying Chen, Jonathan Stewart, New Insights into Antidepressant and Placebo Effects in Depression: Distinctive Effects on Topological Organization of Brain Structural Networks, 2018</p></li>
+</ol>
+</div>
 
 
 
