--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ $(document).ready(function () {
   <a href="Resume.html">
     <span class="fa fa-user-circle-o"></span>
      
-    Resume
+    CV
   </a>
 </li>
 <li>
@@ -645,10 +645,10 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="Resume.html">
+  <a href="CV.html">
     <span class="fa fa-user-circle-o"></span>
      
-    Resume
+    CV
   </a>
 </li>
 <li>
@@ -692,8 +692,8 @@ $(document).ready(function () {
 <p>I am currently a Dr.PH student of <a href="https://www.mailman.columbia.edu/become-student/departments/biostatistics"><strong>Biostatistics</strong></a> in <a href="https://www.mailman.columbia.edu/">Columbia University Mailman School of Public Health</a> and a research scientist at <a href="http://www.nyspi.org">New York State Psychiatric Institute</a>, <a href="https://www.columbiapsychiatry.org">Department of Psychiatry</a>.</p>
 <div id="backgroud" class="section level3">
 <h3><span style="color:#2C85C2; font-family: Babas; font-size: 1em;">Backgroud</span></h3>
-<p>I came to the United States on a business trip in 1997. I fell in love with Columbia University and stayed here since then. I have a MD, a MS and a MA degree.</p>
-<p><a href="resume.html">Learn more about me…</a></p>
+<p>I came to the United States on a business trip in 1997. I fell in love with Columbia University and stayed here since then. I have a MD, a MS and a MA degree. I am interested in applying cutting edge statistical methods to solve public health problems, especially in precision medicine and Psychiatry.</p>
+<p><a href="CV.html">Learn more about me…</a></p>
 </div>
 <div id="contact-me" class="section level3">
 <h3><span style="color:#2C85C2; font-family: Babas; font-size: 1em;">Contact me</span></h3>
