--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="Resume.html">
+  <a href="CV.html">
     <span class="fa fa-user-circle-o"></span>
      
     CV
